--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -29,6 +29,7 @@
             padding: 5px 2px;
             min-width: 80px;
             max-width: 100px;
+            background: aliceblue;
         }
         div.aggregations article>header {
             margin: 0;
@@ -40,7 +41,8 @@
             overflow: hidden;
         }
         a.agg-name, a.agg-name:visited {
-            color: black;
+            color: #11466f;
+            text-decoration: none;
         }
     </style>
 {% endblock %}
