--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -371,7 +371,7 @@ template {
   font-style:  normal;
   font-weight: 400;
   font-display: swap;
-  src: url("Inter-Regular.woff2") format("woff2");
+  src: local(Inter Regular), local(Inter), url("Inter-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -379,7 +379,7 @@ template {
   font-style:  normal;
   font-weight: 500;
   font-display: swap;
-  src: url("Inter-Medium.woff2") format("woff2");
+  src: local(Inter Medium), url("Inter-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -387,7 +387,7 @@ template {
   font-style:  normal;
   font-weight: 700;
   font-display: swap;
-  src: url("Inter-Bold.woff2") format("woff2");
+  src: local(Inter Bold), url("Inter-Bold.woff2") format("woff2");
 }
 
 html, body {
