--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -21,7 +21,7 @@
             justify-self: center;
         }
 
-        div.aggregations article {
+        div.aggregations>div {
             display: grid;
             grid-template-rows: max-content max-content 1fr;
             border: 1px solid gray;
@@ -31,7 +31,7 @@
             max-width: 100px;
             background: aliceblue;
         }
-        div.aggregations article>header {
+        div.aggregations>div>header {
             margin: 0;
             text-align: center;
             display: inline-block;
@@ -55,8 +55,8 @@
     {% else %}
         {% if not has_subscriptions and request.user.is_authenticated %}<div class="showing-aggregations">You have no subscriptions, and there are no default tag aggregations available. Viewing all stories instead. <a href="{% url 'new_aggregation' %}">Create one</a> or <a href="{% url 'public_aggregations' %}">browse public ones from other users</a>.</div>{% elif not request.user.is_authenticated %}<div class="showing-aggregations">There are no default tag aggregations available. Viewing all stories.</div>{% endif %}
     {% endif %}
-    {% if aggregations %}<div class="aggregations">{% for agg in aggregations %}<article><header><a href="{{ agg.get_absolute_url }}" class="agg-name" title="{{ agg.name }} {% if agg.description %} - {{ agg.description }}{% endif %}">{{ agg.name }}</a></header><span class="sparklines" title="activity for last 14 days">{{ agg.last_14_days }}</span></article>{% endfor %}</div>{% endif %}
-    <ul class="posts">
+    {% if aggregations %}<div class="aggregations">{% for agg in aggregations %}<div><header><a href="{{ agg.get_absolute_url }}" class="agg-name" title="{{ agg.name }} {% if agg.description %} - {{ agg.description }}{% endif %}">{{ agg.name }}</a></header><span class="sparklines" aria-hidden="true" title="activity for last 14 days">{{ agg.last_14_days }}</span></div>{% endfor %}</div>{% endif %}
+    <ul class="posts" aria-label="story post list">
         {% for story in stories %}
             {% include "posts/story_list_item.html" with story=story %}
         {% endfor %}
