--- a/sic/templates/posts/story_list_item.html
+++ b/sic/templates/posts/story_list_item.html
@@ -9,7 +9,7 @@
                 {% if request.user.is_authenticated %}
                     <form>
                         {% csrf_token %}
-                        <input type="submit" formaction="{% url_with_next 'upvote_story' story.pk request %}" formmethod="POST" value="">
+                        <input type="submit" title="Upvote story ''{{ story.title }}'" aria-label="Upvote story ''{{ story.title }}'" formaction="{% url_with_next 'upvote_story' story.pk request %}" formmethod="POST" value="">
                     </form>
                 {% endif %}
             </div>
