--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -1060,6 +1060,20 @@ body>main>article {
   max-width: var(--main-width);
 }
 
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px #0003, 0 2px 0 0 #ffffffb3 inset;
+  color: #333;
+  display: inline-block;
+  font-size: .85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+}
+
 p {
   text-align: justify;
   hyphens: auto;
