--- a/sic/templates/posts/submit.html
+++ b/sic/templates/posts/submit.html
@@ -1,6 +1,59 @@
 {% extends "base.html" %}
+{% load static %}
 {% load humanize %}
 {% block title %}{% if story %}edit story - {{ story.title }}{% else %}submit story{% endif %} - sic{% endblock %}
+{% block script %}
+    <script>
+        var error = null;
+        import("{% static 'tag_input_wasm.js' %}")
+            .then((module) => {
+            async function run() {
+                let w = await module.default("{% static 'tag_input_wasm_bg.wasm' %}");
+                w.setup();
+            }
+            return run();
+        }).catch(err => {
+            console.warn("Could not load tag input .wasm file.\n\nThe error is saved in the global variable `error` for more details. The page and submission form will still work.\n\nYou can use `console.dir(error)` to see what happened.");
+            error = err;
+        });
+    </script>
+{% endblock %}
+{% block style %}
+    <style>
+        #tag-wasm {
+            border: 1px solid ThreeDLightShadow;
+            padding: 5px;
+            display: inline;
+        }
+        input#tag-wasm-input {
+            border: none;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        #tag-wasm, #tag-wasm-tag-list {
+            display: inline;
+        }
+        #tag-wasm-tag-list {
+            gap: 6px;
+        }
+        #tag-wasm-tag-list > * {
+            margin-top: 2px;
+        }
+        span.tag-name {
+            vertical-align: middle;
+        }
+        span.tag-remove {
+            vertical-align: middle;
+            cursor: pointer;
+            user-select: none;
+            margin-left: 1px;
+        }
+        p.help-text.after {
+            margin-bottom: 0;
+        }
+    </style>
+    {{tags|json_script:"tags_json" }}
+{% endblock %}
 {% block content %}
     {% if story %}
         <h1>edit story</h1>
@@ -69,7 +122,7 @@
             {{ form.tags.errors }}
             {{ form.tags.label_tag }}
             {% if form.tags.help_text %}
-                <p class="help-text">{{ form.tags.help_text }}</p>
+                <p id="tags-help-text" class="help-text">{{ form.tags.help_text }}</p>
             {% endif %}
             {{ form.tags }}
             {{ form.kind.errors }}
