--- a/sic/templates/about/help.html
+++ b/sic/templates/about/help.html
@@ -26,7 +26,7 @@
                 flex-direction: column;
             }
             div.help div {
-              padding: 1rem 0rem;
+                padding: 1rem 0rem;
             }
         }
 
@@ -56,7 +56,7 @@
         }
         @media (min-width: 600px) {
             div.help div {
-              padding: 1rem 2rem;
+                padding: 1rem 2rem;
             }
         }
     </style>
@@ -114,7 +114,7 @@
     <div class="help">
         <div>
             <h2 id="account_settings">Account settings</h2>
-            <p class="help-text">You can select when to receive emails, whether to show stories with context warnings by default and whether to show colors at all.</p>
+            <p class="help-text">You can select when to receive emails, whether to show stories with content warnings by default and whether to show colors at all.</p>
             <h3>weekly digests</h3>
             <p class="help-text">You can opt-in to a weekly digest email to read all the stories posted since the last time you were sent a digest mail. The digest mail can include all stories or just your aggregation subscriptions. You can also select individual days for delivery.</p>
             <p class="help-text">You can disable it at any time.</p>
