--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -84,8 +84,8 @@
                             <td>{{ user.show_avatars|yesno }}</td>
                         </tr>
                         <tr>
-                            <th>show stories with context warning</th>
-                            <td>{{ user.show_stories_with_context_warning|yesno }}</td>
+                            <th>show stories with content warning</th>
+                            <td>{{ user.show_stories_with_content_warning|yesno }}</td>
                         </tr>
                     </tbody>
                 </table>
